--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,9 +2,58 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+     <link rel="stylesheet" href="/startbootstrap-scrolling-nav-gh-pages/vendor/bootstrap/css/bootstrap.min.css">
+     <link rel="stylesheet" href="/startbootstrap-scrolling-nav-gh-pages/css/scrolling-nav.css">
+      <nav class="navbar navbar-expand-lg navbar-white bg-white fixed-top" id="mainNav">
+    <div class="container">
+      <a style="font-weight: bold; color:black" class="navbar-brand js-scroll-trigger" href="#page-top"><img src="/images/indir (32 x 30).jpg">Sanayim</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">Hakkımızda</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#services">Hizmetlerimiz</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">İletişim</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+    
+
   </head>
-  <body>
+  <body>   
+    <header style="background-color: black;" class="text-white">
+    <div class="container text-center">
+      <h1>Sen üreticini bul, sen yatırımcını!</h1>
+      <p class="lead">Ürettik, sattık, kazandık!</p>
+    </div>
+  </header>
+  <section id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h2>About this page</h2>
+          <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
+          <ul>
+            <li>Clickable nav links that smooth scroll to page sections</li>
+            <li>Responsive behavior when clicking nav links perfect for a one page website</li>
+            <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
+            <li>Minimal custom CSS so you are free to explore your own unique design options</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
     {{{body}}}
+
+
   </body>
 </html>
+ 
