--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="stylesheets/style.css">
     <title>{{{title}}}</title>
-    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css"> 
-    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-  </head>
+</head>
 
-  <body>
-
-    <div class="collapse navbar-collapse">
-      <a class="navbar-brand" href="/">Sanayim.com</a>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="/users">Home</a></li>
-        <li><a href="#about">Menu Item 1</a></li>
-        <li><a href="#contact">Menu Item 2</a></li>
-        <li><a href="#about">Menu Item 3</a></li>
-       </ul>
+<body>
+  <nav class="navbar navbar-dark bg-dark navbar-expand-lg text-white">
+    <div class="container py-2">
+      <a class="navbar-brand" href="/">Sanayim.com</a>  
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSanayim" aria-controls="navbarSanayim">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+      <div class="collapse navbar-collapse" id="navbarSanayim">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item px-3">
+            <a class="nav-link text-white" id="navButtons" href="/">Anasayfa</a>
+          </li>
+          <li class="nav-item px-3">
+            <a class="nav-link text-white" id="navButtons" href="#">Features</a>
+          </li>
+          <li class="nav-item px-3">
+            <a class="nav-link text-white" id="girisButonu" href="/giris">Giriş Yap</a>
+          </li>
+        </ul>
       </div>
-
+    </div>
+  </nav>
+     
+      {{{body}}}  {{!-- index.hbs body olarak alınıyor --}} 
     
-    {{{body}}}
-    
-  </body>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+</body>
 
 </html>
  
