add to addProduct page

--- a/public/stylesheets/form.css
+++ b/public/stylesheets/form.css
@@ -11,3 +11,8 @@
     margin-top: 2%;
     margin-left: 18%;
 }
+#urunEkleForm{
+    margin-top: 5%;
+    margin-right: 35%;
+    margin-left: 15%;
+}
