--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,7 +20,7 @@
             <a class="nav-link text-white" id="navButtons" href="/">Anasayfa</a>
           </li>
           <li class="nav-item px-3">
-            <a class="nav-link text-white" id="navButtons" href="#">Features</a>
+            <a class="nav-link text-white" id="navButtons" href="/urun">Ürün Sat</a>
           </li>
           <li class="nav-item px-3">
             <a class="nav-link text-white" id="girisButonu" href="/giris">Giriş Yap</a>
