--- a/views/login.hbs
+++ b/views/login.hbs
@@ -15,7 +15,7 @@
       {{!-- GIRIS YAP CARD --}}
       <div class="col-md-4" id="girisYap">
         <form class="form-container">
-          <h3>Giriş Yap</h3>
+          <h3>Üye Girişi</h3>
           <div class="form-group pt-4">
             <label for="girisEposta" class="pl-1">E-posta Adresiniz</label>
             <input id="girisEposta" type="text" class="form-control" placeholder="E-posta" value="" />
