--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,8 @@
     border-radius: 10px;
     background-color: aqua ;
 }
+body{
+    background: url('/images/factory-wallpaper-3.jpg') no-repeat center center fixed;
+    background-size: cover;
+
+}
