--- a/views/addProduct.hbs
+++ b/views/addProduct.hbs
@@ -26,7 +26,7 @@
             <input type="text" class="form-control" id="formGroupExampleInput">
         </div>
         <div class="form-group ml-3 mr-3">
-            <label for="formGroupExampleInput2">Another label</label>
+            <label for="formGroupExampleInput2">Üretim Durumu:</label>
             <input type="text" class="form-control" id="formGroupExampleInput2">
         </div>
         <div class="form-group ml-3 mr-3">
