--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,18 +2,20 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="stylesheets/style.css">
-    <title>{{{title}}}</title>
+  <title>{{{title}}}</title>
 </head>
 
 <body>
   <nav class="navbar navbar-dark bg-dark navbar-expand-lg text-white">
     <div class="container py-2">
-      <a class="navbar-brand" href="/">Sanayim.com</a>  
-       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSanayim" aria-controls="navbarSanayim">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+      <a class="navbar-brand" href="/">Sanayim.com</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSanayim"
+        aria-controls="navbarSanayim">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarSanayim">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item px-3">
@@ -29,11 +31,10 @@
       </div>
     </div>
   </nav>
-     
-      {{{body}}}  {{!-- index.hbs body olarak alınıyor --}} 
-    
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  {{{body}}}
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </body>
 
 </html>
- 
