--- a/public/stylesheets/form.css
+++ b/public/stylesheets/form.css
@@ -16,3 +16,10 @@
     margin-right: 35%;
     margin-left: 15%;
 }
+#searchForm{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -100px;
+}
