added search filter

--- a/public/stylesheets/form.css
+++ b/public/stylesheets/form.css
@@ -12,14 +12,51 @@
     margin-left: 18%;
 }
 #urunEkleForm{
-    margin-top: 5%;
+    margin-top: 3%;
     margin-right: 35%;
     margin-left: 15%;
 }
-#searchForm{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    margin-top: -50px;
-    margin-left: -100px;
+    .searchbar{
+    margin-bottom: auto;
+    margin-top: auto;
+    height: 60px;
+    background-color: #353b48;
+    border-radius: 30px;
+    padding: 10px;
 }
+
+.search_input{
+    color: #353b48;
+    background-color: white;
+    border-radius: 30px;
+    border: 0;
+    outline: 0;
+    width: 0;
+    caret-color:transparent;
+    line-height: 40px;
+    transition: width 0.4s linear;
+    }
+
+    .searchbar:hover > .search_input{
+    padding: 0 10px;
+    width: 450px;
+    caret-color:red;
+    transition: width 0.4s linear;
+    }
+
+    .searchbar:hover > .search_icon{
+    margin-left: 4px;
+    background: white;
+    color: #e74c3c;
+    }
+    .search_icon{
+    height: 40px;
+    width: 40px;
+    float: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color:white;
+    text-decoration:none;
+    }
