--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,8 +2,10 @@
 <html>
 
 <head>
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="stylesheets/form.css" type="text/css">
   <title>{{{title}}}</title>
@@ -29,6 +31,14 @@
             <a class="nav-link text-white" id="girisButonu" href="/giris">Giriş Yap</a>
           </li>
         </ul>
+        <ul class="navbar-nav">
+            <div class="d-flex justify-content-center h-100">
+              <li class="searchbar">
+                <input class="search_input" type="text" name="" placeholder="Search...">
+                <a href="" class="search_icon"><i class="fa fa-search"></i></a>
+              </li>
+            </div>
+         </ul>
       </div>
     </div>
   </nav>
