--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,13 +22,13 @@
       <div class="collapse navbar-collapse" id="navbarSanayim">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item px-3">
-            <a class="nav-link text-white" id="navButtons" href="/">Anasayfa</a>
+            <a class="nav-link text-white" id="navButtons" href="/"><i class="fa fa-fw fa-home pr-2"></i>Anasayfa</a>
           </li>
           <li class="nav-item px-3">
             <a class="nav-link text-white" id="navButtons" href="/urun">Ürün Sat</a>
           </li>
           <li class="nav-item px-3">
-            <a class="nav-link text-white" id="girisButonu" href="/giris">Giriş Yap</a>
+            <a class="nav-link text-white" id="girisButonu" href="/giris"><i class="fa fa-fw fa-user pr-2"></i>Giriş Yap</a>
           </li>
         </ul>
         <ul class="navbar-nav">
