add user clientjs

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -33,11 +33,11 @@
 
       {{!-- KAYIT OL CARD --}}
       <div class="col-md-5" id="kayitOl">
-        <form class="form-container">
+        <form id="userForm" class="form-container">
           <h3 class="text-dark">Kayıt Ol</h3>
           <div class="form-group">
             <label class="pt-4 pl-1" for="ePosta">İsim Soyisim:</label>
-            <input type="text" id="ePosta" class="form-control" placeholder="" value="" />
+            <input type="text" id="adSoyad" class="form-control" placeholder="" value="" />
           </div>
           <div class="form-group ">
             <label class="pt-1 pl-1" for="ePosta">E-posta Adresiniz:</label>
@@ -151,5 +151,5 @@
     </div>
   </div>
 </body>
-
+<script src="/addUser.js"></script>
 </html>
