footer menu added

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,24 +25,39 @@
             <a class="nav-link text-white" id="navButtons" href="/"><i class="fa fa-fw fa-home pr-1"></i>Anasayfa</a>
           </li>
           <li class="nav-item px-3">
-            <a class="nav-link text-white" id="navButtons" href="/urun"><i class="fa fa-plus-circle pr-1"></i>  Ürün Sat</a>
+            <a class="nav-link text-white" id="navButtons" href="/urun"><i class="fa fa-plus-circle pr-1"></i> Ürün
+              Sat</a>
           </li>
           <li class="nav-item px-3">
-            <a class="nav-link text-white" id="girisButonu" href="/giris"><i class="fa fa-fw fa-user pr-1"></i>Giriş Yap</a>
+            <a class="nav-link text-white" id="girisButonu" href="/giris"><i class="fa fa-fw fa-user pr-1"></i>Giriş
+              Yap</a>
           </li>
         </ul>
         <ul class="navbar-nav">
-            <div class="d-flex justify-content-center h-100">
-              <li class="searchbar">
-                <input class="search_input" type="text" name="" placeholder="Search...">
-                <a href="" class="search_icon"><i class="fa fa-search"></i></a>
-              </li>
-            </div>
-         </ul>
+          <div class="d-flex justify-content-center h-100">
+            <li class="searchbar">
+              <input class="search_input" type="text" name="" placeholder="Search...">
+              <a href="" class="search_icon"><i class="fa fa-search"></i></a>
+            </li>
+          </div>
+        </ul>
       </div>
     </div>
   </nav>
   {{{body}}}
+
+  <footer class="page-footer font-small mt-5 bg-dark">
+
+    <div class="footer-item text-center py-3">
+      <a id="footerItem" class="text-white px-3" href="#iletisim/"> İletişim </a>
+      <a id="footerItem" class="text-white px-3" href="#iletisim/"> Hakkımızda </a>
+      <a id="footerItem" class="text-white px-3"  href="#iletisim/"> Güvenli Alışveriş Kılavuzu </a>
+      <a id="footerItem" class="text-white px-3"  href="#iletisim/"> Bizden Haberler </a id="footerItem">
+      <a id="footerItem" class="text-white px-3"  href="#iletisim/"> Tedarikçi Olmak İstiyorum </a id="footerItem">
+    </div>
+
+  </footer>
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </body>
