--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="stylesheets/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="stylesheet" href="stylesheets/form.css" type="text/css">
   <title>{{{title}}}</title>
 </head>
@@ -51,9 +52,9 @@
     <div class="footer-item text-center py-3">
       <a id="footerItem" class="text-white px-3" href="#iletisim/"> İletişim </a>
       <a id="footerItem" class="text-white px-3" href="#iletisim/"> Hakkımızda </a>
-      <a id="footerItem" class="text-white px-3"  href="#iletisim/"> Güvenli Alışveriş Kılavuzu </a>
-      <a id="footerItem" class="text-white px-3"  href="#iletisim/"> Bizden Haberler </a id="footerItem">
-      <a id="footerItem" class="text-white px-3"  href="#iletisim/"> Tedarikçi Olmak İstiyorum </a id="footerItem">
+      <a id="footerItem" class="text-white px-3" href="#iletisim/"> Güvenli Alışveriş Kılavuzu </a>
+      <a id="footerItem" class="text-white px-3" href="#iletisim/"> Bizden Haberler </a id="footerItem">
+      <a id="footerItem" class="text-white px-3" href="#iletisim/"> Tedarikçi Olmak İstiyorum </a id="footerItem">
     </div>
 
   </footer>
