--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,7 +26,7 @@
 
 
     for (let i = 0; i < urunLength; i++) {
-      content = '<div style="text-align:center" class="card ml-3 mr-3"><a href="/details/' + arr[i] + '"/><img src = "../images/' + arr3[i] + '" alt = "Avatar" style = "width: 100 % "><div class="container"><h4 id="ad"><b>' + arr2[i] + '</b></h4><p>' + "Fiyatı: " + arr4[i] + " TL" + '<p>' + '</div></div>';
+      content = '<div style="text-align:center" class="card ml-3 mr-3"><a href="/details/' + arr[i] + '"/><img src = "../images/' + arr3[i] + '" alt = "Avatar" style = "width: 250px; height:250px, "><div class="container"><h4 id="ad"><b>' + arr2[i] + '</b></h4><p>' + "Fiyatı: " + arr4[i] + " TL" + '<p>' + '</div></div>';
       deneme.innerHTML += content;
 
     }
