--- a/views/details.hbs
+++ b/views/details.hbs
@@ -39,7 +39,5 @@
 
   </script>
 
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz0cHDaq86hNmoqY9Mg1DB-tsTjPs5EnY&callback=initMap"
-    type="text/javascript"></script>
+  <script async defer src="API_KEY" type="text/javascript"></script>
 </div>
